<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hackathon.aso.schedulemaster.activity.WhoAnswerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView17" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_who_title"
                android:id="@+id/textView5"
                android:textSize="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_whenenqueres_title"
                android:id="@+id/textView2"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:background="#ff7fc8d5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enquetitle_activity_whatenquet"
                android:id="@+id/textView21"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title_whoAns"
                android:paddingTop="15dp"
                android:layout_marginLeft="50dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comme_activity_whatenquet"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_comment_whoAns"
                android:layout_marginLeft="50dp"
                android:paddingTop="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500"
                android:layout_marginTop="20dp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:id="@+id/rg_answer_whoAms">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_whoenqueres_join"
                    android:id="@+id/rb_yes_whoAns"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_whoenqueres_notjoin"
                    android:id="@+id/rb_no_whoAns"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:checked="false" />
            </RadioGroup>



            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500"
                android:layout_marginTop="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_send_whoAns"
                android:background="@mipmap/send"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp" />

            </LinearLayout>
    </ScrollView>
</RelativeLayout>
