<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_acountentry"
        android:id="@+id/textView5"
        android:textSize="30dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:background="#FFA500" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_activity_entry"
        android:id="@+id/textView9"
        android:textSize="15.5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:textColor="#FF0000"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_activity_acount"
            android:id="@+id/textView10"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:layout_marginLeft="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/checkId"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:layout_marginLeft="132dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_activity_acount"
            android:id="@+id/textView12"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/checkPass"
            android:layout_marginLeft="50dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="103dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_activity_acount"
            android:id="@+id/textView14"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/checkuserName"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewCheckchenge"
            android:background="@mipmap/chenge"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewChecktouroku"
            android:background="@mipmap/checktouroku"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="40dp" />

    </LinearLayout>
</LinearLayout>
    </ScrollView>