<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView22" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_planname_title"
                android:id="@+id/textView2"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:gravity="center"
                android:background="#ff7fc8d5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_planname_comme"
                android:id="@+id/textView24"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView26"
                android:layout_marginLeft="50dp"
                android:textSize="20dp"
                android:background="@drawable/simple_frame"
                android:paddingRight="300dp"
                android:paddingBottom="15dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_member_title"
                android:id="@+id/textView3"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:gravity="center"
                android:background="#ff7fc8d5"
                android:layout_marginTop="20dp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="391dp"
                android:id="@+id/listView3" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>