<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_who_title"
                android:id="@+id/textView5"
                android:textSize="30dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_whocheck_comme"
                android:id="@+id/textView2"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:background="#ff7fc8d5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enquetitle_activity_whatenquet"
                android:id="@+id/textView21"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/simple_frame"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comme_activity_whatenquet"
                android:id="@+id/textView22"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/editTextcomme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/simple_frame"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_whoenqueres_comme"
                android:id="@+id/textView3"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:background="#ff7fc8d5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:background="@mipmap/member"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_activity_whatenquet"
                android:id="@+id/textView13"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerWho"
                android:layout_marginTop="15dp"
                android:layout_weight="0.28" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:background="#FFA500"
                android:layout_marginTop="15dp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:background="@mipmap/kakunin"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="100dp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>